--- a/mern-stack/package.json
+++ b/mern-stack/package.json
@@ -13,7 +13,7 @@
     "watch:server": "nodemon .",
     "watch:client": "watchify -vd -t babelify client/ -o server/public/main.js",
     "watch": "npm-run-all --parallel watch:*",
-    "postinstall": "npm run watch",
+    "postinstall": "npm run build",
     "heroku-postbuild": "npm run seed"
   },
   "babel": {
