--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "watch:client": "watchify -vd -t babelify client/ -o server/public/main.js",
     "watch": "npm-run-all --parallel watch:*",
     "postinstall": "npm run build",
-    "heroku-postbuild": "npm run see"
+    "heroku-postbuild": "npm run seed"
   },
   "babel": {
     "plugins": [
